allow-productpage-details-viewer-AuthorizationPolicy.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: details-viewer
  namespace: default
spec:
  selector:
    matchLabels:
      app: details
  rules:
  - to:
    - operation:
        methods: 
        - "GET"
  - from:
    - source:
        principals:
        - "cluster.local/ns/default/sa/bookinfo-productpage"
