allow-remaining-microservices-viewer-AuthorizationPolicy.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: reviews-viewer
  namespace: default
spec:
  selector:
    matchLabels:
      app: reviews
  rules:
  - to:
    - operation:
        methods: 
        - "GET"
  - from:
    - source:
        principals:
        - "cluster.local/ns/default/sa/bookinfo-productpage"
---
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: ratings-viewer
  namespace: default
spec:
  selector:
    matchLabels:
      app: ratings
  rules:
  - to:
    - operation:
        methods: 
        - "GET"
  - from:
    - source:
        principals:
        - "cluster.local/ns/default/sa/bookinfo-reviews"
